# Rusted-Game-Engine

./: Cargo.toml  LICENSE  README.md
crates/core/: Cargo.toml
crates/engine-core/: Cargo.toml
crates/engine-core/src/: camera.rs  lib.rs
crates/gfx/: Cargo.toml
crates/gfx-dx12/: Cargo.toml
crates/gfx-vulkan/: Cargo.toml
crates/gfx-wgpu/: Cargo.toml
crates/gfx-wgpu/shaders/: triangle.wgsl
crates/gfx-wgpu/src/: camera.rs  camera_bind.rs  context.rs  depth.rs  lib.rs  pipeline_cache.rs  renderer.rs  shaders.rs  types.rs  ui.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/shader-core/: Cargo.toml
crates/shader-core/src/: lib.rs
crates/ui-core/: Cargo.toml  readme.md
crates/ui-core/src/: lib.rs
demos/triangle/: Cargo.toml
demos/triangle/src/: main.rs
