[package]
name = "gfx-dx12"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D12",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_System_Threading",
  "Win32_System_SystemServices",
  "Win32_UI_WindowsAndMessaging",
] }
winit = "0.30.12"
raw-window-handle = "0.6"
