[package]
name = "gfx-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { workspace = true }
pollster = "0.4.0"
winit = "0.30.12"
raw-window-handle = "0.6"
bytemuck = { version = "1.16", features = ["derive"] }
glam = { version = "0.30.5", features = ["bytemuck"] }
imgui = "0.12"
imgui-winit-support = "0.13"
imgui-wgpu = "0.25.0"