[package]
name = "triangle"
version = "0.1.0"
edition = "2021"

[dependencies]
platform = { path = "../../crates/platform" }
gfx-wgpu = { path = "../../crates/gfx-wgpu" }
shader-core = { path = "../../crates/shader-core" }
winit = "0.30.12"
glam = "0.30.5"

[[bin]]
name = "triangle"
path = "src/main.rs"
windows_subsystem = "windows"